Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             
             <div class="medium-4 large-offset-1 large-4 cell">
                 {% if person.image %}
-                    <p style="margin-right: 20px;"><img src="{{ site.baseurl }}{{ person.image }}" alt="{{ person.name }}" /></p>
+                    <p class="staff-photo-container"><img src="{{ site.baseurl }}{{ person.image }}" alt="{{ person.name }}" /></p>
                 {% endif %}
             </div>
             
