--- a/whanau.html
+++ b/whanau.html
@@ -1,5 +1,5 @@
 ---
-title: Whanau Info
+title: Whānau Info
 meta_title:
 description:
 hero_image: /uploads/hero/hero-kids-swing.jpg
@@ -13,8 +13,10 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
             
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
-                	<blockquote><p><strong><em>&ldquo;It takes a village to raise a child&rdquo;</em></strong></p></blockquote>
-                	<p>Parents and whanau are very much a part of this process. We want parents to view Footprints as another home away from home &ndash; a place where they can come and relax, stay as often as they like and to be involved in their child&rsquo;s exciting learning journey. We respect and acknowledge the knowledge that parents have and can contribute and we involve them as often as possible in the centre life.&nbsp;</p>
+                	<blockquote>
+                		<p><strong><em>&ldquo;It takes a village to raise a child&rdquo;</em></strong></p>
+                	</blockquote>
+                	<p>Parents and whānau are very much a part of this process. We want parents to view Footprints as another home away from home &ndash; a place where they can come and relax, stay as often as they like and to be involved in their child&rsquo;s exciting learning journey. We respect and acknowledge the knowledge that parents have and can contribute and we involve them as often as possible in the centre life.&nbsp;</p>
                 	<h3>Settling in</h3>
                 	<p>The settling process is where it all starts. We do not put a time limit on this and encourage parents to visit the centre as often as they like prior to starting. We believe that developing a trusting relationship with your child is the most important part of this process and understand that this takes time. During the settling process teachers will speak with parents about their child&rsquo;s needs and their aspirations for them.</p>
                 	<p>In the infants and toddlers room, the settling in process especially important. This is why we work closely with parents to ensure to best possible transition. In the early stages visits are kept short, with the length of time increasing as time goes on. We encourage parents to change their child&rsquo;s nappy in front of a teacher so that we develop an understanding of what the child is used to. The next nappy change the teacher will do in the presence of the parent to ensure we are doing this correctly. Likewise the parent will put their child to bed for their first sleep and be there when they away to lessen any anxiety that the child may have. All children are more than welcome to bring special cuddly toys and items from home to help with this process.</p>
