Updated 'contact-success.html' via CloudCannon

--- a/contact-success.html
+++ b/contact-success.html
@@ -9,7 +9,7 @@ sitemap_exclude: true
 
 {% include heading.html %}
 
-<div class="wrapper-padding padding-top-medium padding-bottom-medium">
+<div class="wrapper-padding padding-top-medium padding-bottom-xlarge">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
         
