Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@ hero_image: /uploads/hero/hero-pirates-contact.jpg
                         </div>
                        
                         <div class="cell">
-                            <input type="hidden" name="_to" value="viv@lumina.net.nz" />
+                            <input type="hidden" name="_to" value="footprints.preschool@xtra.co.nz,viv@lumina.net.nz" />
                             <!-- <input type="hidden" name="_cc" value="" /> -->
                             <input type="text" name="_gotcha" style="display: none;" />
                             <div class="g-recaptcha" data-sitekey="6LdNRYQUAAAAAHely9jcpViFzKeq_LBwUImeyJhQ"></div>
