--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
-title: Footprints Preschool, Waihi
-meta_title:
-description:
+title: 'Footprints Preschool, Waihi'
+meta_title: Closest Preschool To Waihi Town Centre
+description: >-
+  “Learning impressions, lasting for life” is the core belief that the learning
+  and experiences that the children acquire at Footprints Preschool, will
+  benefit them for the rest of their lives.
 ---
 
 <a id="main"></a>
@@ -38,7 +41,7 @@ description:
             
             <div class="large-offset-4 large-8 cell">
                 <div class="blurb-content" style="position: relative; z-index: 999;">
-                    <div class="editable lead">
+                    <div class="editable lead" href="/about/">
                         <h2>Our Philosophy</h2>
                     	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
                     </div>
