Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
                 <div class="editable">
                 	<p><strong>Sustainable practices</strong><br />We see ourselves as the kaitiakitanga of our land. We are mindful of our carbon footprint and take steps to minimise and reduce this while learning collaboratively with the children to promote sustainable practices. Developing children&rsquo;s knowledge of our wider natural environment through hands on experiences is seen as an essential part of this learning.</p>
                 	<p><strong>Play</strong><br />Play is the highest form of learning for the child. Children will experience long periods of uninterrupted play. Teachers are observers in this important process; only stepping in when required to provide support, guidance and when asked to by the child.&nbsp;</p>
-                	<p><strong>Authenticity</strong><br />At Footprints Preschool we believe in being authentic; both is what we believe in and with what we say and do with our children, families and teachers. Being open and honest is a central component of our team. We are advocates for everyone.</p>
+                	<p><strong>Authenticity</strong><br />At Footprints Preschool we believe in being authentic; both in what we believe in and with what we say and do with our children, families and teachers. Being open and honest is a central component of our team. We are advocates for everyone.</p>
                 </div>
             </div>
         
