--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
         <div class="grid-x grid-margin-x">
             
             <div class="cell">
-                	<h2>Our Philosophy</h2>
+                	<h2>Footprints Preschool Philosophy</h2>
             </div>
             
             <div class="medium-7 large-6 cell">
