Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: About
-meta_title:
-description:
+meta_title: 'Early Childhood Education, Waihi'
+description: "“Learning impressions, lasting for life”\_ is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives."
 heading: About Us
 hero_image: /uploads/hero/hero-kids-pirates.jpg
 ---
