Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
             
              <div class="medium-7 large-offset-1 large-5 cell">
                 <div class="editable">
-                	<p><strong>The environment</strong><br />Our environment represents a home where we meet the biological needs of our children through natural beauty and sustainable practices. We support imagination and creativity by recognizing the importance of &nbsp;'play urges' which develops a rich understanding of problem solving, communication, attention, risk and resilience.<strong></strong></p>
-                	<p><strong>Sustainable practices</strong><br />We see ourselves as the kaitiakitanga of our land. We are mindful of our carbon footprint and take steps to minimise and reduce this while learning collaboratively with the children to promote sustainable practices. Developing children&rsquo;s knowledge of our wider natural environment through hands on experiences is seen as an essential part of this learning.&nbsp;</p>
+                	<p><strong>The environment</strong><br />Our environment represents a home where we meet the biological needs of our children through natural beauty and sustainable practices. We support imagination and creativity by recognizing the importance of 'play urges' which develops a rich understanding of problem solving, communication, attention, risk and resilience.</p>
+                	<p><strong>Sustainable practices</strong><br />We see ourselves as the kaitiakitanga of our land. We are mindful of our carbon footprint and take steps to minimise and reduce this while learning collaboratively with the children to promote sustainable practices. Developing children&rsquo;s knowledge of our wider natural environment through hands on experiences is seen as an essential part of this learning.</p>
                 	<p><strong>Authenticity</strong><br />At Footprints Preschool we believe in being authentic; both in what we believe in and with what we say and do with our children, families and teachers. Being open and honest is a central component of our team. We are advocates for everyone.</p>
                 </div>
             </div>
