Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 ---
 title: Page Not Found
 meta_title: Page Not Found
-description: "Sorry, that page can't be found..."
+description: 'Sorry, that page can''t be found...'
 heading: Oops...
-hero_image:
+hero_image: /uploads/hero/hero-jenga-blocks.jpg
 ---
 
 {% include heading.html %}
