Updated 'help.html' via CloudCannon

--- a/help.html
+++ b/help.html
@@ -3,7 +3,7 @@ title: Admin Help
 meta_title:
 description:
 heading:
-hero_image:
+hero_image: /uploads/hero/kids-beach-hands-raised.jpg
 sitemap_exclude: true
 ---
 
