Updated 'help.html' via CloudCannon

--- a/help.html
+++ b/help.html
@@ -15,6 +15,8 @@ sitemap_exclude: true
         
             <div class="cell">
                 <div class="editable">
+                	<h4>PDF Files</h4>
+                	<p>Remove the spaces in the filenames (before uploading) and replace with hyphens.</p>
                 </div>
             </div>
     
