Updated 'the-journey.html' via CloudCannon

--- a/the-journey.html
+++ b/the-journey.html
@@ -14,7 +14,7 @@ hero_image: /uploads/hero/kids-beach-hands-raised.jpg
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
                 	<h2>The Soul Room - Infants and Toddlers</h2>
-                	<p><strong>The relationship is all.</strong> Developing a relationship with children and families that is real and genuine comes before everything else.</p>
+                	<p><strong>The relationship is all.</strong> Developing a relationship with children and families that is real and genuine comes before everything else. ...</p>
                 	<p>The Soul Room is a calm and nurturing environment, supported by teachers who are unhurried in their teaching practices. Children are free to explore the environment; both inside and outside.</p>
                 	<p>Children will enjoy long periods of uninterrupted play. The teacher&rsquo;s role in this very important process is to observe and only step in when required to do so.</p>
                 	<p>All practices in the Soul Room are guided by the Pikler Principles. Everything that happens in this room is centred around the needs of the child. Important care moments such as feeding, nappy changing and sleeping are based on the individual requirements of the child.</p>
