Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -36,7 +36,7 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<p>The relationship is everything. The Pikler Approach underpins everything we do in the Soul room - and the centre. Infants and toddlers are nurtured by highly experienced and knowledgeable teachers, who are unhurried and responsive to the needs and cues of the child.</p>
                 	<p>There are no set routines in the Soul room &ndash; rather the day is based on the needs of the child. Children enjoy long periods of uninterrupted play and exploring. Milestones and events are recorded in children&rsquo;s Communication books.</p>
                 	<h3>Complaints Procedure</h3>
-                	<p>All complaints are to be taken up with Phil Davison (the centre manager), in the first instance. We do our best to find a quick resolution to all complaints. If a formal complaint is to be made parents need to do this in writing. The complaints procedure is displayed at the centre.</p>
+                	<p>All complaints are to be taken up with Tina Mudgway (the centre manager), in the first instance. We do our best to find a quick resolution to all complaints. If a formal complaint is to be made, parents need to do this in writing. The complaints procedure is displayed at the centre.</p>
                 </div>
             </div>
         
