Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -33,8 +33,8 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<h3>Birthdays</h3>
                 	<p>Children and parents are welcomed to celebrate birthday at the centre. If parents wish to supply a cake or other food for their child&rsquo;s special day, then they are more than welcomed to do so.</p>
                 	<h3>Soul Room &ndash; The Infants and Toddlers Room</h3>
-                	<p>The relationship is everything. The Pikler Approach underpins everything we do in the Soul room - and the centre. Infants and toddlers are nurtured by highly experienced and knowledgeable teachers, who are unhurried and responsive to the needs and cues of the child.</p>
-                	<p>There are no set routines in the Soul room &ndash; rather the day is based on the needs of the child. Children enjoy long periods of uninterrupted play and exploring. Milestones and events are recorded in children&rsquo;s Communication books.</p>
+                	<p>The relationship is everything. The Pikler approach underpins everything we do in the Soul room - and the centre. Infants and toddlers are nurtured by highly experienced and knowledgeable teachers, who are unhurried and responsive to the needs and cues of the child.</p>
+                	<p>There are no set routines in the Soul room &ndash; rather the day is based on the needs of the child. Children enjoy long periods of uninterrupted play and exploring. Milestones and events are recorded in children&rsquo;s communication books.</p>
                 	<h3>Complaints Procedure</h3>
                 	<p>All complaints are to be taken up with Tina Mudgway (the centre manager), in the first instance. We do our best to find a quick resolution to all complaints. If a formal complaint is to be made, parents need to do this in writing. The complaints procedure is displayed at the centre.</p>
                 </div>
