--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ description: >-
             <div class="large-8 cell">
                 <div class="blurb-content">
                     <div class="editable lead">
-                        <h2>Closest Preschool to Waihi Town Centre</h2>
-                    	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mudpit, a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
-                    	<p>We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and fish in the under two&rsquo;s room. The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
+                    	<h2>Closest Preschool to Waihi Town Centre</h2>
+                    	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mud kitchen, a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
+                    	<p>We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and pet fish . The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
                     </div>
                     <p><a class="editable button" href="/about/">More About Us</a></p>
                 </div>
@@ -42,8 +42,8 @@ description: >-
             <div class="large-offset-4 large-8 cell">
                 <div class="blurb-content" style="position: relative; z-index: 999;">
                     <div class="editable lead" href="/about/">
-                        <h2>Our Philosophy</h2>
-                    	<p>“Learning impressions, lasting for life” is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                    	<h2>Our Philosophy</h2>
+                    	<p>&ldquo;Learning impressions, lasting for life&rdquo; is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
                     </div>
                     <p><a class="editable button" href="/about#philosophy">More</a></p>
                 </div>
