Updated 'fees.html' via CloudCannon

--- a/fees.html
+++ b/fees.html
@@ -15,17 +15,26 @@ hero_image: /uploads/hero/hero-jenga-blocks.jpg
             <div class="large-offset-2 large-8 cell">
                 <div class="editable">
                 	<h1 class="lead">&nbsp;</h1>
-                	<p class="lead">Children (ages 0-2yrs) receive a <strong>subsidised rate of $1*</strong> per hour of care</p>
-                	<p class="lead">Children (ages 3-5yrs) receive <strong>30 fully subsidised hours*</strong> of care (so no cost to you).</p>
-                	<p class="lead">Conditions: Subsidised hours are up to a maximum of 6 hours per day</p>
-                	<h3>Extra Hours</h3>
-                	<p>If a child does more than 6 hours per day at the centre then the hourly rate of $5.00 applies. Extra hours over the child&rsquo;s booked times will also incur the $5.00 per hour charge.</p>
-                	<h3>WINZ Subsidy</h3>
-                	<p>All parents who qualify for a WINZ subsidy are expected to do so to offset our low fee structure. We will assist you with this.</p>
-                	<h3>Holidays and Absences</h3>
-                	<p>We do not charge for public holidays.</p>
-                	<p>You will still be charged if your child is absent.</p>
-                	<p>Every child is given 15 days holiday per year. If your child is away for longer than this please speak to the Centre Manager. <em>Two week&rsquo;s notice is required of any leave as it may affect staffing ratios.</em></p>
+                	<h3>Fees (as of 1 March 2020)</h3>
+                	<p>Children 0-2 years old:&nbsp; &nbsp;<strong>Partially Subsidised rate of $1 per hour </strong>- 30 hours @ $30</p>
+                	<p>Children 3-5 years old:&nbsp; &nbsp; <strong>Fully subsidised - 30 hours @ no cost</strong></p>
+                	<p>All children, all families, are eligible for the above rates up to a maximum of 6 hours per day. After that the regular rate of $5 per hour starts,</p>
+                	<h3>Casual Hours</h3>
+                	<p>If a child requires one off extra hours, or a one off extra day,&nbsp;<strong>the casual rate applies of $5 per hour&nbsp;</strong></p>
+                	<p>Extra days or hours need to be in consultation with the centre manager, and will be granted if space is available.</p>
+                	<h3>WINZ Subsidies</h3>
+                	<p>If you think you may qualify for a WINZ subsidy and have a 0-2year old enrolling with us, we would appreciate you applying. Centre managers are able to help parents with filling in forms if needed.</p>
+                	<h3>Important to Note</h3>
+                	<ul>
+                		<li>We <em>do not</em> charge for public holidays,</li>
+                		<li>We <em>do</em> charge if your child is absent for their booked times.</li>
+                		<li>We <em>may</em> charge an Early/Late charge for any children unexpectedly dropped off prior to their booking, or picked up later than their booking. Late fees are $10 per event.</li>
+                		<li>If management have been consulted and have granted the extra time (before or after your booking) you will be charged at the Casual Rate above, and <em>will not</em> incur the Early/Late charge.</li>
+                	</ul>
+                	<h3>Holidays</h3>
+                	<p>Every child may take 15 days holiday per year. When you have informed us that you are going on holiday, we will apply a 50% discount to your regular fees for the duration of your holiday.&nbsp;</p>
+                	<p>If your child is to be away for longer than 3 weeks please speak to the Centre Manager.</p>
+                	<p>Please provide 2 weeks notice for holidays.</p>
                 </div>
             </div>
         
