Updated 'whanau.html' via CloudCannon

--- a/whanau.html
+++ b/whanau.html
@@ -45,6 +45,12 @@ hero_image: /uploads/hero/hero-kids-swing.jpg
                 	<p>3-5 year olds&nbsp; &nbsp; &nbsp;Fully subsidised first 6 hours each day&nbsp; &nbsp; &nbsp; (Costs you nothing for 30 hours)</p>
                 	<p>Additional hours /Casual Rate&nbsp; &nbsp; @ $5 per hour</p>
                 	<p>There are no conditions on receiving the fees above, all children, from all families are eligible. We also accept WINZ subsidies and are happy to help you with any paperwork if you think you might qualify for one for your 0-2 year old.&nbsp;</p>
+                	<h3>Transition to School/Haere ki te Kura</h3>
+                	<p>After growing their independence, imagination, self care skills and empathy for others, our Footprints kids are ready to head off in the big world of school and formal learning.</p>
+                	<p>As new owners of footprints, we are working on building our relationships with the local schools, and finding out what transition looks like in each school, so we can better prepare children for the changes they may encounter. We also hope to be informed so we can help parents out if they are unsure on school selection. &nbsp;Once of our staff members is a primary school teacher so is happy to answer questions about general school life, if you are encountering school for the first time.&nbsp;</p>
+                	<h3>Leaving/ Haere Rā</h3>
+                	<p>Please provide at least 2 weeks notice that your child is going to be moving on from the centre, this includes children going to school. Please chat to us about your plans for your 5 year old's transition to school. We are happy to help in any way we can with this process.&nbsp;</p>
+                	<p>We like to celebrate your child's last day with us in a special way (child's choice) and enjoy the memories we have shared together over your time of growth and learning at Footprints.</p>
                 	<h3>Complaints/Amuamu</h3>
                 	<p>All complaints are to be taken up with Tina Mudgway (the centre manager), in the first instance. We do our best to find a quick resolution to all complaints. If a formal complaint is to be made, parents need to do this in writing. The complaints procedure is displayed inside the front door at the centre.</p>
                 </div>
