--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ description: >-
                 <div class="blurb-content">
                     <div class="editable lead">
                     	<h2>Closest Preschool to Waihi Town Centre</h2>
-                    	<p>Footprints Preschool is located near the town centre of Waihi. We have a large outdoor natural environment including a sandpit, barkpit, mud kitchen, a stream and a plum tree. The under two&rsquo;s area has a large natural grassed area with a sandpit and plenty of room for the infants and toddlers to explore and develop.</p>
-                    	<p>We have vegetable gardens that the children are free to access at any time. The centre also has a resident turtle and pet fish . The environment is well resourced with plenty of loose parts so that children can direct their play and lead their own learning.</p>
+                    	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment.</p>
+                    	<p>Our centre consists of two rooms. The 0-2 year olds area - Our Soul Room -has it own natural grassed area, sandpit and water cascade so toddlers can explore the &nbsp;world around them, while infants can experience plenty of new sights, smells, sounds and tastes safely inside or outside.&nbsp; The 2-5 year old area - The Heart Room - Our children love the outdoors, spending hours exploring and creating in our sandpit, loose parts barkpit, mud kitchen, and mini stream. They love creating masterpieces with fun art activities, or zooming around on the bikes. So bring plenty of changes of clothes, because learning is a messy business!</p>
+                    	<p>We encourage children to be kaitiaki of our centre, they love to help plant (and eat) the edible gardens, help to feed the resident turtle and pet fish, help to wipe tables or clean art equipment, or sweep up messes - we are all one big team.</p>
                     </div>
                     <p><a class="editable button" href="/about/">More About Us</a></p>
                 </div>
