Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ description: >-
                     <div class="editable lead" href="/about/">
                     	<h2>Our Philosophy</h2>
                     	<p>&ldquo;Learning impressions, lasting for life&rdquo; is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                    	<p>&nbsp;</p>
                     </div>
                     <p><a class="editable button" href="/about#philosophy">More</a></p>
                 </div>
