--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
         <div class="grid-x grid-margin-x">
             
             <div class="cell">
-                	<h2>Footprints Preschool Philosophy</h2>
+                <h2 class="editable">Our Philosophy</h2>
             </div>
             
             <div class="medium-7 large-6 cell">
