Updated 'nature-hidden.html' via CloudCannon

--- a/nature-hidden.html
+++ b/nature-hidden.html
@@ -20,6 +20,7 @@ photos:
     title:
   - gallery_image: /uploads/gallery/img-2664.jpg
     title:
+sitemap_exclude: true
 ---
 
 {% include heading.html %}
