Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ meta_title: Page Not Found
 description: 'Sorry, that page can''t be found...'
 heading: Oops...
 hero_image: /uploads/hero/hero-jenga-blocks.jpg
+sitemap_exclude: true
 ---
 
 {% include heading.html %}
