Updated 'blog-hidden/index.html' via CloudCannon

--- a/blog-hidden/index.html
+++ b/blog-hidden/index.html
@@ -5,6 +5,7 @@ description:
 heading:
 hero_image: /uploads/hero/hero-running-kids.jpg
 _section_id: blog
+sitemap_exclude: true
 ---
 
 {% include heading.html %}
