Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ description: >-
                     <div class="editable lead">
                     	<h2>Closest Preschool to Waihi Town Centre</h2>
                     	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment.</p>
-                    	<p>Our centre consists of two rooms. The 0-2 year olds area - Our Soul Room -has it own natural grassed area, sandpit and water cascade so toddlers can explore the &nbsp;world around them, while infants can experience plenty of new sights, smells, sounds and tastes safely inside or outside.&nbsp; The 2-5 year old area - The Heart Room - These children love the outdoors, spending hours exploring and creating in our sandpit, loose parts barkpit, mud kitchen, and mini stream. They love creating masterpieces with fun art activities, or zooming around on the bikes. So bring plenty of changes of clothes, because learning is a messy business!</p>
-                    	<p>We encourage children to be kaitiaki of our centre, they love to help plant (and eat) the edible gardens, help to feed the resident turtle and pet fish, help to wipe tables or clean art equipment, or sweep up messes - we are all one big team.</p>
+                    	<p>Our centre consists of two rooms.</p>
+                    	<p>The 0-2 year olds area - Our Soul Room -Here your toddler can explore the world around them in a natural grassed area, and sandpit complete with water cascade, while your infant can experience plenty of new sights, smells, sounds and tastes safely inside and outside. &nbsp;</p>
+                    	<p>The 2-5 year old area - The Heart Room - Here your preschooler can spend much of their day outdoors, exploring and creating in the sandpit, loose parts barkpit, mud kitchen, and mini stream. They will create masterpieces with art activities, or zoom around on the bikes. So bring plenty of changes of clothes, because learning is a messy business!</p>
                     </div>
                     <p><a class="editable button" href="/about/">More About Us</a></p>
                 </div>
