Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@ description: >-
             <div class="large-8 cell">
                 <div class="blurb-content">
                     <div class="editable lead">
-                    	<h2>Closest Preschool to Waihi Town Centre</h2>
-                    	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment.</p>
-                    	<p>Our centre consists of two rooms.</p>
-                    	<p>The 0-2 year olds area - Our Soul Room -Here your toddler can explore the world around them in a natural grassed area, and sandpit complete with water cascade, while your infant can experience plenty of new sights, smells, sounds and tastes safely inside and outside. &nbsp;</p>
-                    	<p>The 2-5 year old area - The Heart Room - Here your preschooler can spend much of their day outdoors, exploring and creating in the sandpit, loose parts barkpit, mud kitchen, and mini stream. They will create masterpieces with art activities, or zoom around on the bikes. So bring plenty of changes of clothes, because learning is a messy business!</p>
+                    	<h2>Reconnecting with Nature</h2>
+                    	<p>Footprints Preschool is located near the heart of Waihi town. We are a purpose built centre with a large and varied natural outdoor environment that has been designed to encourage children to connect with nature.</p>
+                    	<p>Our centre consists of two spaces.</p>
+                    	<p>The 0-2 year olds area - Our Soul Room -Here your toddler will explore the world around them in a natural grassed area, and sandpit haven, complete with water cascade. While your infant will experience plenty of new sights, smells, sounds and tastes safely inside or outside. &nbsp;</p>
+                    	<p>The 2-5 year old area - The Heart Room - Here your preschooler will spend much of their day outdoors, exploring and creating in the sandpit, loose parts barked area, mud kitchen, and mini stream. They will create masterpieces with art activities, build in the carpentry area or zoom around on the bikes.&nbsp;</p>
+                    	<p>Our Soul Room sits within our Heart Room, so strong connections are maintained between the two spaces.</p>
                     </div>
                     <p><a class="editable button" href="/about/">More About Us</a></p>
                 </div>
