Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ description: >-
                 <div class="blurb-content" style="position: relative; z-index: 999;">
                     <div class="editable lead" href="/about/">
                     	<h2>Our Philosophy</h2>
-                    	<p>&ldquo;Learning impressions, lasting for life&rdquo; is the core belief that the learning and experiences that the children acquire at Footprints Preschool, will benefit them for the rest of their lives.</p>
+                    	<p>&ldquo;Learning impressions, lasting for life&rdquo; is the core belief that the learning and experiences that your child will acquire at Footprints Preschool, will benefit them, not only to be ready for school, but to be ready for the rest of their lives.</p>
                     	<p>&nbsp;</p>
                     </div>
                     <p><a class="editable button" href="/about#philosophy">More</a></p>
