Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 title: 'Footprints Preschool, Waihi'
-meta_title: Closest Preschool To Waihi Town Centre
+meta_title: Reconnecting your child to nature.
 description: >-
   “Learning impressions, lasting for life” is the core belief that the learning
-  and experiences that the children acquire at Footprints Preschool, will
-  benefit them for the rest of their lives.
+  and experiences that your child will acquire at Footprints Preschool, will not
+  only prepare them for school, but for the rest of their lives.
 ---
 
 <a id="main"></a>
