Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@ hero_image: /uploads/hero/hero-kids-pirates.jpg
                 		<li><strong>Blue</strong> represents connections to te Wai (the Water), te Awa (the river) and te moana (the sea).</li>
                 		<li><strong>Brown</strong> represents Te Whenua (the land/Earth)</li>
                 	</ul>
-                	<p>All three elements are to be viewed as one - dependent on each other. They are central to the learning your child will experience at our centre.&nbsp;</p>
+                	<p>All three elements are to be viewed as one - dependent on each other. They are central to the learning your child will experience at our Footprints Preschool.</p>
                 	<p>The two footprints are without shoes, showing the special connection made when bare feet touch earth. They are positioned in the shape of a heart representing our belief that respect for your child is at the heart of everything that we do.</p>
-                	<p><strong>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</strong> is the core belief that the learning and experiences that your child acquires at Footprints Preschool, will not only prepare them for school, but benefit them for the rest of their lives.</p>
+                	<p><strong>&ldquo;Learning impressions, lasting for life&rdquo;&nbsp;</strong> is the belief that the learning and experiences that your child acquires at Footprints Preschool, will not only prepare them for school, but benefit them for the rest of their lives.</p>
                 	<p>See more at our philosophy below.</p>
                 	<p>&nbsp;</p>
                 	<p>&nbsp;</p>
